<resources>
    <string name="app_name">دليل الطواف</string>
    <string name="textview1">دليل الطواف</string>
    <string name="botton1">مناسك العمرة</string>
    <string name="botton2">مناسك الحج</string>
    <string name="botton3">ادعية الحج و العمرة</string>
    <string name="botton4">معلومات</string>
    <string name="textview2">كيفية أداء العمرة خطوة بخطوة</string>
    <string name="textview3">خطوات العمرة تبدأ بالإحرام، ثم الطواف، ثم السعي بين الصفا والمروة، ثم الحلق أو التقصير، وفيما يأتي بيان كل خطوة بالتفصيل.</string>
    <string name="textview4">۱.الإحرام </string>
    <string name="textview5">۲.الطّواف</string>
    <string name="textview6">۳.السّعي </string>
    <string name="textview7">٤.الحلق أو التقصير</string>
    <string name="textview8">ذو الحليفة (أبيار علي)</string>
    <string name="textview9">ميقات وادي محرم</string>
    <string name="textview10">يلملم (السعدية)</string>
    <string name="textview11">قرن المنازل (السيل الكبير)</string>
    <string name="textview12">أماكن الاحرام</string>
    <string name="ehram">خطوات الإحرام</string>
    <string name="textview13">١.الاغتسال: لما في ذلك من تنظيف للبدن وإزالة للرائحة، وقد اغتسل رسول الله -صلى الله عليه وسلم- لإحرامه.</string>
    <string name="textview14">٢.التنظيف: حيث يُشرع التنظيف قبل الإحرام بالأخذ من شعر الأبط والشارب والعانة، حتى لا يحتاج للأخذ منها وهو مُحرم.</string>
    <string name="textview15">٣.التطيّب: حيث يُستحب التطيّب بما وجد من أنواع الطيب كالبخور، وماء الورد، والمسك، وغيرها قبل الإحرام.</string>
    <string name="textview16">٤.التجرّد من المخيط: والمخيط هو كل ما تمت خياطته على قدر الملبوس عليه كالقميص، والسروال، غيرها، ويُستبدل برداء وإزار أبيضين.</string>
    <string name="textview17">كيفةالطّواف</string>
    <string name="textview18">عند الوصول إلى المسجد الحرام ينبغي قطع التلبية، ويُستحب الدخول بالقدم اليمنى، وقول: "أعوذُ باللهِ العظيمِ وبوجهِه الكريمِ وسلطانِه القديمِ من الشيطانِ الرجيمِ"، وقبل التوجه إلى الكعبة للشروع في الطواف يجب التأكد من الطهارة من الحدث الأكبر والأصغر، لأن الطواف مثل الصلاة غير أنه يجوز الكلام فيه، وعند الوصول إلى مكان الطواف يُستحب استلام الحجر الأسود باليد اليمنى، وتقبيله، وقول: "بسم الله، الله أكبر"، وإن كان في ذلك مشقة بسبب الازدحام، فلا بأس باستلام الحجر الأسود بعصا أو نحوها، فإن كان في ذلك مشقة فيكفي الإشارة إليه من بعيد والتكبير من غير تقبيل اليد، ثم يبدأ بالطواف، وعند الوصول إلى الركن اليماني يُستحب استلامه باليد اليمنى وقول: " بسم الله، الله أكبر"، ولكن في حال وجود المشقة فلا بأس بتركه، ومن الأمور المستحبة أثناء الطواف الرمل في أول ثلاثة أشواط للرجل، وهو المشي السريع مع تقارب الخطى، والاضطباع في كل الأشواط وهو كشف الكتف الأيمن، بوضع وسط الرداء تحت المنكب الأيمن، وطرفيه على العاتق الأيسر.</string>
    <string name="textview19">ويُشرع أثناء الطواف الإكثار من الدعاء والذكر، وليس في الطواف دعاء ولا ذكر مخصوص بل يُشرع الدعاء والذكر بما تيسّر، ولكن يُستحب قراءة قول الله تعالى: (رَبَّنَا آتِنَا فِي الدُّنْيَا حَسَنَةً وَفِي الْآخِرَةِ حَسَنَةً وَقِنَا عَذَابَ النَّارِ)، عند الوصول بين الركنين في كل الأشواط، ويتم الطواف بسبعة أشواط، ويُستحب استلام الحجر الأسود وتقبيله في الشوط السابع إن تيسر ذلك، وبعد الانتهاء من الطواف يُستحب صلاة ركعتين خلف مقام إبراهيم إن تيسر ذلك، وإن لم يتيسر فتُصلّى في أي مكان من الحرم، ويُقرأ في الركعة الأولى بعد الفاتحة سورة الكافرون، وفي الثانية سورة الإخلاص، وبعد الانتهاء من الصلاة يُستحب استلام الحجر الأسود إن تيسر ذلك.</string>
    <string name="textview20"> السّعي بين الصفا والمروة</string>
    <string name="textview21">بعد الانتهاء من الطواف يتم التوجه إلى الصفا لبدء السعي، وعند الوصول يُستحب قراءة قول الله تعالى: (إِنَّ الصَّفَا وَالْمَرْوَةَ مِن شَعَائِرِ اللَّـهِ فَمَنْ حَجَّ الْبَيْتَ أَوِ اعْتَمَرَ فَلَا جُنَاحَ عَلَيْهِ أَن يَطَّوَّفَ بِهِمَا وَمَن تَطَوَّعَ خَيْرًا فَإِنَّ اللَّـهَ شَاكِرٌ عَلِيمٌ)، ثم الصعود على جبل الصفا واستقبال الكعبة، وتكبير الله وحمده بقول: "الله أكبر، الله أكبر، الله أكبر، لا إلَهَ إلَّا اللَّهُ وحدَهُ لا شريكَ لَه لَه المُلكُ ولَهُ الحمدُ يُحيي ويميتُ وَهوَ علَى كلِّ شيءٍ قديرٌ لا إلَهَ إلَّا اللَّهُ وحدَهُ لا شريكَ لَه أنجَزَ وعدَهُ ونصرَ عبدَهُ وَهزمَ الأحزابَ وحدَه"، وتكرار القول ثلاث مرات والدعاء بما تيسّر بعد كل مرة، ثم النزول والتوجه نحو المروة مشياً، ويُستحب للرجال دون النساء الإسراع بالسعي بين العلمين الأخضرين، ويُشرع الدعاء والذكر أثناء السعي، وعند الوصول إلى المروة يُكرر ما فُعل عند الصفا من استقبال القبلة، والتكبير، والذكر، والدعاء، وبذلك يتم الشوط الأول، ثم العودة إلى الصفا والإسراع في موضع الإسراع والذكر والدعاء، فيتم بذلك الشوط الثاني، وهكذا إلى أن يتم السعي بسبعة أشواط تبدأ بالصفا وتُختتم بالمروة.</string>
    <string name="textview22">بعد الانتهاء من السعي يجب على الرجل حلق الرأس أو التقصير، ولا بُد أن يعم جميع الرأس سواءً في الحلق أو التقصير، أما المرأة فتقصر من شعرها بمقدار أنملة، ومن الجدير بالذكر أن الحلق أفضل من التقصير لأن رسول الله -صلى الله عليه وسلم- دعا للمحلقين بالمغفرة والرحمة ثلاثاً، بينما دعا مرة واحدة للمقصرين، وبذلك تكون العمرة قد تمت.</string>
    <string name="textview23">الحلق أو التقصير</string>
    <string name="textview24">١.أنواع نسك الحج</string>
    <string name="textview39">ذو الحليفة، بضم الحاء وفتح اللام: هو ميقات الإحرام لأهل المدينة والذين يمرون عليه من غير أهلها يحرمون منه، وهو من المواقيت التي حددها النبي ويعتبر أبعد المواقيت عن مكة.</string>
    <string name="textview40">موقع المسجد</string>
    <string name="textview41">يقع المسجد على الجانب الغربي من وادي العَقِيق، في المنطقة المعروفة باسم "أبيار علي" ويطلق عليه البعض مسمى مسجد أبيار علي -أو آبار علي، ويبعد عن المسجد النبوي قرابة أربعة عشر كيلومترا.</string>
    <string name="textview42">تاريخ إعمار المسجد</string>
    <string name="textview43">بني المسجد في عهد عمر بن عبد العزيز عندما ولي إمارة المدينة (87:93 هـ)، وجدد في العصر العباسي، ثم جدد في العصر العثماني في عهد السلطان محمد الرابع (1058 هـ: 1099 هـ). وكان المسجد صغيرًا جدًا مبنيًا من اللبن والحجارة، ولم يكن الحجاج والمعتمرون في المواسم يجدون راحتهم فيه، فأمر الملك فيصل بن عبد العزيز بتجديده وتوسعته. ومع زيادة عدد الحجاج والمعتمرين تم مضاعفة حجمه عدة أضعاف، وتزويده بالمرافق اللازمة؛ فأصبح المسجد محطة متكاملة للمسافرين؛ فقد بُني على شكل مربع مساحته 6.000 متر مربع، ويتكون من مجموعتين من الأروقة تفصل بينهما ساحة واسعة مساحتها ألف متر، وله أقواس تنتهي بقباب طويلة يبلغ ارتفاعها عن الأرض 16 م، ويتسع المسجد لـ 5000 مصل على الأقل، وللمسجد مئذنة متميزة على شكل سلم حلزوني ارتفاعها 62 مترًا. وتتصل بالمسجد مباني الإحرام والوضوء، كما بني من جهته الشرقية سوق لتأمين حاجات الحجاج، وأنشئت في الجهة الغربية منه مواقف سيارات وحديقة نخل واسعة.</string>
    <string name="textview44">التسميات</string>
    <string name="textview45">يطلق الناس على هذا الموضع الكثير من الأسماء وهي: ذو الحليفة - مسجد الشجرة - مسجد الميقات - أبيار علي أو آبار علي - ميقات الاحرام - الاحرام - المحرم، كمايعرف أيضاً بـ الحسا.</string>
    <string name="textview46">ذو الحليفة</string>
    <string name="textview47">اسمه ذو الحليفة وهي تصغير الحلفة وهي (مفردة) نبات الحلفاء النبات المعروف.</string>
    <string name="textview48">مسجد الشجرة</string>
    <string name="textview49">كما عرف هذا المسجد بمسجد الشجرة لأن النبي ﷺ عند خروجه إلى مكة للعمرة أو الحج كان ينزل تحت ظل شجرة في هذه الناحية يصلي، ثم يهل محرماً يريد العمرة أو الحج.</string>
    <string name="textview50">مسجد الميقات</string>
    <string name="textview51">كما يسميه البعض مسجد الميقات لانه أحد المواقيت (الأمكنة) الخمسة التي عينها النبي ﷺ ليحرم منها من أراد الحج أو العمرة.</string>
    <string name="textview52">أبيار علي</string>
    <string name="textview53">ويسميه بعض العامة أبيار علي أو آبار علي، وهناك قولان لهذة التسمية وهي:

لأن عليا أمير المؤمنين قاتل الجن بها، وعلى قول ابن تيمية فإن الجن لم يقاتلهم أحد من الصحابة ويدعي انه لا فضيلة لهذا البئر، ولا مذمة، ولا يستحب أن يرمي بها حجرًا ولا غيره.
وقال البعض أن سبب التسمية (أبيار علي) الاسم المشهور بالمدينة، إنما هو نسبة لعلي بن دينار والي دارفور في ذلك الوقت.
الآ أن هذا غير صحيح ؛ فإن علي دينار(وهو سلطان دارفور) المنسوب ذلك الاسم له جاء إلي الميقات عام 1898م حاجاً (أي منذ حوالي مائة عام)، فوجد حالة الميقات سيئة، فحفر الآبار للحجاج ليشربوا منها ويُطعمهم عندها، وجدد مسجد ذي الحليفة، ذلك المسجد الذي صلي فيه النبي ﷺ وهو خارج للحج من المدينة المنورة، وأقام وعمّر هذا المكان، ولذلك سمي المكان بأبيار علي نسبة لعلي بن دينار. الجواب الذي لا يختلف فيه اثنان : أن هذا الاسم معروف مذكور ومنثور في بطون الكتب قبل ولادة علي دينار بمئات السنين. فقد ذكره ابن تيمية (المتوفى سنة 728) وقال : في فتاواه (26/99) (فذو الحليفة : هي أبعد المواقيت، بينها وبين مكة عشر مراحل، أو أقل أو أكثر بحسب اختلاف الطرق، فإن منها إلى مكة عدة طرق، وتسمي وادي العَقِيق، ومسجدها يسمي مسجد الشجرة، وفيها بئر، تسميها جهال العامة : "بئر علي"، لظنهم أن عليا قاتل الجن بها، وهو كذب، فإن الجن لم يقاتلهم أحد من الصحابة، وعلى أرفع قدرًا من أن يثبت الجن لقتاله، ولا فضيلة لهذا البئر، ولا مذمة، ولا يستحب أن يرمي بها حجرًا ولا غيره.)
    </string>
    <string name="textview54">ثمّ نحن جديرون بإحياء ما نطق به سيّد الخلق بتسمية الميقات باسمه الذي سمّاه رسول الله، فهو (ذو الحليفة)</string>
    <string name="textview55">قال الشيخ بكر أبو زيد – - : وما بني على الاختلاف فينبغي أن يكون محل هجر وفراق، فلنهجر التسمية المكذوبة ولنستعمل ما خرج التلفظ به بين شفتي النبي - صلى الله عليه وسلم - ولنقل : ((ذو الحليفة)).
وما ذكره الشيخ –- عين الصواب فما هجر اسم صحيح إلاّ وحلّت تسمية محدثة, فينسى الأصل ويشتهر المحدث، بل وينكر على من أحيا الأصل أحيانا، وهذا كحال السنن والبدع، فما حلّت بدعة إلاّ وهجرت سنة، حتى تتلبّس البدعة بصورة السنة والعكس. والله المستعان
    </string>
    <string name="textview56">إيضاح عن مسجد المعرس</string>
    <string name="textview57">قال البعض بأن مسجد "المعرس هو مسجد ذي الحليفة، وهذا غير صحيح فمسجد المعرس يقع في جنوب شرق مسجد ذي الحليفة وبمسافة 100 م تقريبا عن سور المسجد الحالي، حيث يقع هذا المسجد على طرف وادي العَقِيق وهو واد مبارك.</string>
    <string name="meqat">أماكن الأحرم</string>
    <string name="textview68">قرن المنازل ميقات الحج لأهل نجد ، ويسمى الآن السيل الكبير، وموقعه شمال مدينة الطائف ويبعد عنها 55 كم ويبعد عن مكة المكرمة 75 كم</string>
    <string name="textview69">ملتقى شباب السيل</string>
    <string name="textview70">ويمتلكون شباب وبنات السيل الكبير قدرة كبيرة من الإبداع ومن نماذج الإبداع والإحسان ملتقى شباب السيل الذي أقيم بالسيل الكبير بكوادر من شباب السيل و بدعم من رجال الأعمال والتجار بالسيل الكبير ، واليوم لديهم اليوم طموح كبير جداً وهو أن يطوروا منطقتهم وينهضون بها لتواكب رؤية 2030 .</string>
    <string name="textview71">الميقات</string>
    <string name="textview72">ميقات قرن المنازل هو ميقات أهل نجد ومن أتى عليها.</string>
    <string name="textview73">التحديد والتوقيت</string>
    <string name="textview74">عن ابن عباس -رضي الله عنهما- قال: وقت رسول الله - صلى الله عليه وسلم- لأهل المدينة ذا الحليفة ولأهل الشام الجحفة ولأهل نجد قرن المنازل ولأهل اليمن يلملم فقال: ((هن لهن ولمن أتى عليهن من غير أهلهن لمن كان يريد الحج أو العمرة فمن كان دونهن فمهله من أهله وكذلك حتى أهل مكة يهلون منها)). رواه البخاري ومسلم.</string>
    <string name="textview75">تحقيقات تاريخية</string>
    <string name="textview76">تحقيقات تاريخية عن ميقات قرن المنازل كتبها المؤرخ حمد الجاسر يتناول المقال عددًا من الحقائق التاريخية عن ميقات قرن المنازل في صحيفة ام القرى بالعدد 1027 سنة الاصدار : الحادية والعشرون التاريخ الهجري : 1363-11-18 التاريخ الميلادي : 03-11-1944</string>
</resources>